# gbgreen

./: .gitignore  CMakeLists.txt  README.md
binfiles/assets/: menu1_sel1.gbp  menu2_sel1-1.gbp  menu2_sel1-2.gbp  test.gbp  title.gbp
binfiles/palettes/: Green.gbcp  Monochrome.gbcp  VeryGreen.gbcp
src/: bus.cpp  bus.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  cpu_helpers.cpp  emulator.h  ext_instructions.cpp  ext_instructions.h  gb_gamepad.cpp  gb_gamepad.h  gbtools.h  instructions.cpp  instructions.h  interrupts.cpp  interrupts.h  io.cpp  io.h  main.cpp  mbc.cpp  mbc.h  ppu.cpp  ppu.h  timer.cpp  timer.h  tools.cpp  tools.h
